# Hackathon-TodoCli-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.specify/memory/: constitution.md
history/prompts/001-todo-cli-app/: 0001-create-todo-cli-app-spec.spec.prompt.md  0002-create-todo-cli-app-plan.plan.prompt.md  0003-create-todo-cli-app-tasks.tasks.prompt.md  0004-complete-todo-cli-app-implementation.green.prompt.md
history/prompts/002-advanced-features/: 2-advanced-features-spec.spec.prompt.md  3-advanced-features-plan.plan.prompt.md  4-advanced-features-tasks.tasks.prompt.md  5-advanced-features-implementation.tasks.prompt.md
phase-II/: .gitignore  CLAUDE.md  readme.md
phase-II/backend/: .env.example  .gitignore  Dockerfile  Dockerfile.hf  README.md  alembic.ini  test_bcrypt.py  test_server.py  test_tasks.py
phase-II/backend/src/: main.py  (+1 more)
phase-II/frontend/: IMPLEMENTATION.md  jest.config.js  middleware.ts  package-lock.json  package.json  tailwind.config.ts
specs/001-intermediate-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-advanced-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: main.py
src/models/: task.py
src/services/: task_manager.py
src/todo_cli_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/integration/: test_cli.py
tests/unit/: test_task.py  test_task_manager.py
(+122 files in other folders)
